force-app/main/default/objects/BRE_Organisation__c/BRE_Organisation__c.object-meta.xml
<CustomObject>
    <label>BRE Organisation</label>
    <nameField>
        <label>BRE Organisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRE Organisation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>