force-app/main/default/objects/BRE_Organisation__c/fields/Consignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Number__c</fullName>
    <label>Consignment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>