force-app/main/default/objects/BRE_Organisation__c/fields/Operation_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operation_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>$Source.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BRE_Organisation__c</referenceTo>
    <relationshipLabel>BRE Organisation</relationshipLabel>
    <relationshipName>BRE_Organisation</relationshipName>
    <type>Lookup</type>
</CustomField>